# Portfolio

./: .env.example  .gitignore  .replit  DEPLOYMENT_CHECKLIST.md  Dockerfile  EXTERNAL_DEPLOYMENT_GUIDE.md  PRODUCTION_DEPLOYMENT.md  Procfile  README.md  REPLIT_DEPLOYMENT.md  deploy_instructions.md  docker-compose.yml  index.html  package-lock.json  package.json  production_checklist.md  pyproject.toml  script.js  script.min.js  start.sh  start_backend.sh  start_frontend.sh  style.css  styles.css  styles.css.save  styles.min.css
nginx/: default.conf
portfolio_backend/: db.sqlite3  manage.py  requirements.txt
portfolio_backend/portfolio/: __init__.py  admin.py  middleware.py  models.py  serializers.py  urls.py  views.py
portfolio_backend/portfolio-venv/: pyvenv.cfg
portfolio_backend/portfolio/management/commands/: seed_data.py
portfolio_backend/portfolio/migrations/: 0001_initial.py
portfolio_backend/portfolio_backend/: production.py  settings.py  urls.py  wsgi.py
portfolio_backend/staticfiles/: staticfiles.json
portfolio_backend/templates/: 404.html  500.html
portfolio_frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
portfolio_frontend/src/: App.jsx  index.css
portfolio_frontend/src/components/: ErrorBoundary.jsx  Footer.jsx  Navbar.jsx  ScrollToTop.jsx  ThemeProvider.jsx
portfolio_frontend/src/pages/: AboutPage.jsx  ContactPage.jsx  HomePage.jsx  ProjectsPage.jsx
portfolio_frontend/src/services/: api.js
portfolio_frontend/src/utils/: cn.js  imageUtils.js
(+13 files in other folders)
