[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "django-cors-headers==4.3.1",
    "django==4.2.7",
    "djangorestframework==3.14.0",
    "pillow==10.0.1",
    "psycopg2-binary==2.9.7",
    "python-dotenv==1.0.0",
    "gunicorn==21.2.0",
    "whitenoise==6.6.0",
    "dj-database-url>=3.0.0",
]
